Add support for acking alarms